--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
-    "express": "^3.4.8"
+    "express": "^3.4.8",
+    "mongoose": "^4.4.8"
   },
   "devDependencies": {},
   "bundleDependencies": [],
