--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "angular-ui-sortable": "^0.13.4",
     "bower": "^1.7.7",
     "express": "^3.4.8",
     "mongoose": "^4.4.8",
