--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
   "dependencies": {
     "angular-ui-sortable": "^0.13.4",
     "bower": "^1.7.7",
+    "cors": "^2.7.1",
     "express": "^3.4.8",
-    "mongoose": "^4.4.8",
+    "machinepack-hackerrank": "^0.1.2",
+    "mongoose": "^4.4.10",
     "ng-dialog": "^0.5.9",
     "node-uuid": "^1.4.7",
-    "uuid": "^2.0.1"
+    "q": "^1.4.1",
+    "uuid": "^2.0.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
