--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
   "dependencies": {
     "angular-ui-sortable": "^0.13.4",
     "bower": "^1.7.7",
+    "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "express": "^3.4.8",
+    "express-session": "^1.13.0",
     "machinepack-hackerrank": "^0.1.2",
     "mongoose": "^4.4.10",
     "ng-dialog": "^0.5.9",
     "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "q": "^1.4.1",
+    "session": "^0.1.0",
     "uuid": "^2.0.1",
     "xmlhttprequest": "^1.8.0"
   },
