--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "angular-ui-sortable": "^0.13.4",
+    "body-parser": "^1.15.0",
     "bower": "^1.7.7",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
