--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.13.0",
     "machinepack-hackerrank": "^0.1.2",
     "mongoose": "^4.4.10",
+    "multer": "^1.1.0",
     "ng-dialog": "^0.5.9",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
